--- a/LibraryManagementApp/LibraryManagementApp.csproj
+++ b/LibraryManagementApp/LibraryManagementApp.csproj
@@ -15,6 +15,7 @@
     <None Remove="Assets\Fonts\Roboto\Roboto-Regular.ttf" />
     <None Remove="Assets\Fonts\Roboto\Roboto-Thin.ttf" />
     <None Remove="Assets\Fonts\Roboto\Roboto-ThinItalic.ttf" />
+    <None Remove="Assets\Images\default.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,6 +30,7 @@
     <Resource Include="Assets\Fonts\Roboto\Roboto-Italic.ttf" />
     <Resource Include="Assets\Fonts\Roboto\Roboto-Regular.ttf" />
     <Resource Include="Assets\Fonts\Roboto\Roboto-Thin.ttf" />
+    <Resource Include="Assets\Images\default.png" />
   </ItemGroup>
 
 </Project>
